# colortool

./: CMakeLists.txt  README.md  colortool.cpp
modules/: FindEigen.cmake
resources/: colorspaces.json  illuminants.json
